--- a/force/force.html
+++ b/force/force.html
@@ -10,7 +10,8 @@
     <body>
         <div id="sidebar">
             <h2 id="nodename">No node selected</h2>
-            <h2>Ports:</h2>
+            <h2 id="portlist">Ports:</h2>
+            <h2 id="flowtable">Flow rules:</h2>
         </div>
         <div id="divider"></div>
         <div id="content"></div>
