Use dpid to differentiate nodes; add ability to have passive viewers

--- a/force/force-view.html
+++ b/force/force-view.html
@@ -10,12 +10,8 @@
     <body>
         <div id="sidebar">
             <h2 id="nodename">No node selected</h2>
-            <h2>Ports:</h2>
-            <div id="portlist">
-            </div>
-            <h2>Flow rules:</h2>
-            <div id="flowstats">
-            </div>
+            <h2 id="portlist">Ports:</h2>
+            <h2 id="flowtable">Flow rules:</h2>
         </div>
         <div id="divider"></div>
         <div id="content"></div>
@@ -26,6 +22,6 @@
                 Is pyreticVis running?
             </span>
         </div>
-        <script type="text/javascript" src="force.js"></script>
+        <script type="text/javascript" src="force-view.js"></script>
     </body>
 </html>
